commit 133(internal validation set )

--- a/TeacherApp/templates/addinternal.html
+++ b/TeacherApp/templates/addinternal.html
@@ -37,14 +37,14 @@
 
                     <div class="mb-3">
                         <label class="form-label">Internal Mark Obtained</label>
-                        <input type="text" name="internalmark" min="0" placeholder="Enter marks obtained"
+                        <input type="text" name="internalmark"  placeholder="Enter marks obtained"
                                class="form-control" required onkeyup="Validateinternal()">
                         <small class="text-danger" id="err_internal"></small>
                     </div>
 
                     <div class="mb-3">
                         <label class="form-label">Total Mark</label>
-                        <input type="text" name="totalmark" min="1" placeholder="Enter total marks" class="form-control"
+                        <input type="text" name="totalmark"  placeholder="Enter total marks" class="form-control"
                                required onkeyup="Validatetotal()">
                         <small class="text-danger" id="err_total"></small>
                     </div>
