--- a/TeacherApp/templates/editinternal.html
+++ b/TeacherApp/templates/editinternal.html
@@ -41,7 +41,7 @@
 
                     <div class="mb-3">
                         <label class="form-label">Internal Mark Obtained</label>
-                        <input type="number" name="internalmark" min="0" placeholder="Enter marks obtained"
+                        <input type="text" name="internalmark"  placeholder="Enter marks obtained"
                                class="form-control" required value="{{internal.Internalmark}}" onkeyup="Validateinternal()">
                         <small class="text-danger" id="err_internal"></small>
 
@@ -49,7 +49,7 @@
 
                     <div class="mb-3">
                         <label class="form-label">Total Mark</label>
-                        <input type="number" name="totalmark" min="1" placeholder="Enter total marks"
+                        <input type="text" name="totalmark"  placeholder="Enter total marks"
                                class="form-control" required value="{{internal.Totalmark}}" onkeyup="Validatetotal()">
                         <small class="text-danger" id="err_total"></small>
 
