--- a/TeacherApp/templates/addstudent.html
+++ b/TeacherApp/templates/addstudent.html
@@ -167,9 +167,9 @@ document.addEventListener("DOMContentLoaded", function () {
 
     window.validateReg = function () {
         err_reg.innerHTML =
-            /^[A-Z0-9]+$/.test(myform.student_regid.value.trim())
+            /^[A-Z]{3}\d{2}[A-Z]{2}\d{3}$/.test(myform.student_regid.value.trim())
                 ? ""
-                : "Register Number must contain capital letters and digits only";
+                : "Enter a valid Register Id (eg :PKG23EC001)";
     };
 
     window.validateBatch = function () {
