commit 138(blue tick in chatbot issue)

--- a/StudentApp/templates/student_chat.html
+++ b/StudentApp/templates/student_chat.html
@@ -19,7 +19,7 @@
         <div class="chat-header">
             <img src="{% static 'teacheradmin/assets/images/teacher.jpg'%}" class="rounded-circle" height="100px" width="100px">
             <h4 style="margin-left:1px;">Tutor</h4>
-            <button id="clearChatBtn" onclick="return confirm('Are you sure ?')">Clear Chat</button>
+            <button id="clearChatBtn" onclick="return confirm('Are you sure ?')" class="btn btn-outline-success" style="border-radius:50px; margin-left:850px;">Clear Chat</button>
         </div>
 
         <div id="chat-body" class="chat-body"></div>
