--- a/TeacherApp/templates/Chatbot.html
+++ b/TeacherApp/templates/Chatbot.html
@@ -74,7 +74,7 @@
 
             <button id="clearChatBtn"
                     onclick="return confirm('Clear this chat?')"
-                    class="clear-btn">
+                    class="clear-btn btn btn-outline-danger" >
                 Clear Chat
             </button>
         </div>
