commit 140(blue tick in chatbot working on)

--- a/StudentApp/templates/student_chat.html
+++ b/StudentApp/templates/student_chat.html
@@ -7,10 +7,9 @@
 <script>
     const BASE_URL = "/StudentPortal";
     const senderSide = "student";
-    const studentID = "";
+    const studentID = "{{ student_id }}";
 </script>
 
-</script>
 
 <script src="{% static 'chatbot/whatsapp.js' %}"></script>
 
