--- a/TeacherApp/templates/editstudent.html
+++ b/TeacherApp/templates/editstudent.html
@@ -110,7 +110,7 @@
                     </div>
 
                     <div class="mb-3">
-                        <img src="{{student.Student_prof.url}}" height="120px">
+                        <img src="{{student.Student_prof.url}}" height="120px" width="200px">
                         <input type="file" name="student_prof" class="form-control mt-2">
                     </div>
 
