--- a/TeacherApp/templates/Chatbot.html
+++ b/TeacherApp/templates/Chatbot.html
@@ -15,7 +15,7 @@
 
 <div class="messenger-wrapper">
 
-    <!-- ================= LEFT CHAT LIST ================= -->
+<!--    Left Side Student Lis -->
     <div class="chat-list">
 
         <div class="chat-list-header">
@@ -54,7 +54,7 @@
 
     </div>
 
-    <!-- ================= RIGHT CHAT WINDOW ================= -->
+
     <div class="chat-window">
 
         <div class="chat-header">
